update addtocart in client side

--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -411,7 +411,9 @@
                                         <i class="fa fa-star" aria-hidden="true"></i>
                                     </div>
                                     <div class="cart">
-                                        <a href="cart.html" data-toggle="tooltip" data-placement="left" title="Add to Cart"><img src="img/core-img/cart.png" alt=""></a>
+                                        <a id="addtoCart" href="#" data-toggle="tooltip" data-placement="left" value="P126" title="Add to Cart">
+                                            <img src="img/core-img/cart.png" alt="">
+                                        </a>
                                     </div>
                                 </div>
                             </div>
@@ -524,7 +526,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
     <script src="js/plugins.js"></script>
     <!-- Active js -->
     <script src="js/active.js"></script>
-
+    <!-- Add to cart js -->
+    <script src="js/handle.js"></script>
 </body>
 
 </html>
