--- a/views/listProductByBrand.ejs
+++ b/views/listProductByBrand.ejs
@@ -1,3 +1,4 @@
+
 <%products.forEach(function(product) { %>
     <!-- Single Product Area -->
     <div class="col-12 col-sm-6 col-md-12 col-xl-6">
@@ -38,3 +39,34 @@
         </div>
     </div>
 <%})%>
+<p>split</p>
+<div class="col-12">
+        <!-- Pagination -->
+        <nav aria-label="navigation">
+            <ul class="pagination justify-content-end mt-50" id="list-page">
+                   
+                    <%if(typeof(objLast) != "undefined"){%>
+                        <%var page%>
+                        <%if(QProduct%limit == 0) page = QProduct/limit
+                        else page = QProduct/limit + 1%>                                        
+                        <%for(var i = 1;i<= page ;i++){%>
+                            <%if(i == 1){%>
+                                <li class="page-item active">
+                                        <a class="page-link" href="#" data-link-type="/shop/<%=objLast.CategoryName%>" data-id="P<%=parseInt(objLast.ProductID.split('P')[1]) - limit%>" onclick="getProduct(this)"><%=i%></a>
+                                </li>
+                            <%}else if(i == 2){%>
+                                <li class="page-item active">
+                                        <a class="page-link" href="#" data-link-type="/shop/<%=objLast.CategoryName%>" data-id="P<%=parseInt(objLast.ProductID.split('P')[1])%>" onclick="getProduct(this)"><%=i%></a>
+                                </li>
+                            <%}else{%>
+                                <li class="page-item active">
+                                        <a class="page-link" href="#" data-link-type="/shop/<%=objLast.CategoryName%>" data-id="P<%=parseInt(objLast.ProductID.split('P')[1]) + limit* (i-2)%>" onclick="getProduct(this)"><%=i%></a>
+                                </li>
+                            <%}%>
+                        <%}%>
+                    <%}%>
+            </ul>
+        </nav>
+    </div>
+<p>split</p>
+        js/handle.js
