--- a/views/checkout.ejs
+++ b/views/checkout.ejs
@@ -62,30 +62,28 @@
 
         <div class="cart-table-area section-padding-100">
             <div class="container-fluid">
+                <form action="#" method="post">
                 <div class="row">
                     <div class="col-12 col-lg-8">
                         <div class="checkout_details_area mt-50 clearfix">
-
                             <div class="cart-title">
                                 <h2>Checkout</h2>
                             </div>
-
-                            <form action="#" method="post">
                                 <div class="row">
                                     <div class="col-md-6 mb-3">
-                                        <input type="text" class="form-control" id="first_name" value="" placeholder="First Name" required>
+                                        <input name="FirstName" type="text" class="form-control" id="first_name" value="<%=cus.FirstName%>" placeholder="First Name" required>
                                     </div>
                                     <div class="col-md-6 mb-3">
-                                        <input type="text" class="form-control" id="last_name" value="" placeholder="Last Name" required>
+                                        <input name="LastName" type="text" class="form-control" id="last_name" value="<%=cus.LastName%>" placeholder="Last Name" required>
                                     </div>
                                     <div class="col-12 mb-3">
-                                        <input type="text" class="form-control" id="company" placeholder="Company Name" value="">
+                                        <input type="text" class="form-control" id="company" placeholder="Company Name" value="<%=cus.Country%>">
                                     </div>
                                     <div class="col-12 mb-3">
-                                        <input type="email" class="form-control" id="email" placeholder="Email" value="">
+                                        <input name="email" align="Email" type="email" class="form-control" id="email" placeholder="Email" value="<%=cus.Email%>">
                                     </div>
                                     <div class="col-12 mb-3">
-                                        <select class="w-100" id="country">
+                                        <select class="w-100" id="country" name="country">
                                         <option value="usa">United States</option>
                                         <option value="uk">United Kingdom</option>
                                         <option value="ger">Germany</option>
@@ -94,19 +92,20 @@
                                         <option value="aus">Australia</option>
                                         <option value="bra">Brazil</option>
                                         <option value="cana">Canada</option>
+                                            <option value="VietNam" <% var t = (cus.Country=="Vietnam")? "selected" : "" %> <%=t%>> VietNam</option>
                                     </select>
                                     </div>
                                     <div class="col-12 mb-3">
-                                        <input type="text" class="form-control mb-3" id="street_address" placeholder="Address" value="">
+                                        <input name="Address" type="text" class="form-control mb-3" id="street_address" placeholder="Address" value="<%=cus.Address%>">
                                     </div>
                                     <div class="col-12 mb-3">
-                                        <input type="text" class="form-control" id="city" placeholder="Town" value="">
+                                        <input name="City" type="text" class="form-control" id="city" placeholder="Town" value="<%=cus.City%>">
                                     </div>
                                     <div class="col-md-6 mb-3">
-                                        <input type="text" class="form-control" id="zipCode" placeholder="Zip Code" value="">
+                                        <input name="ZipCode" type="text" class="form-control" id="zipCode" placeholder="Zip Code" value="<%=cus.ZipCode%>">
                                     </div>
                                     <div class="col-md-6 mb-3">
-                                        <input type="number" class="form-control" id="phone_number" min="0" placeholder="Phone No" value="">
+                                        <input name="Phone" type="text" class="form-control" id="phone_number" min="0" placeholder="Phone No" value="<%=cus.Phone%>">
                                     </div>
                                     <div class="col-12 mb-3">
                                         <textarea name="comment" class="form-control w-100" id="comment" cols="30" rows="10" placeholder="Leave a comment about your order"></textarea>
@@ -123,37 +122,37 @@
                                         </div>
                                     </div>
                                 </div>
-                            </form>
+
                         </div>
                     </div>
                     <div class="col-12 col-lg-4">
                         <div class="cart-summary">
                             <h5>Cart Total</h5>
                             <ul class="summary-table">
-                                <li><span>subtotal:</span> <span>$140.00</span></li>
+                                <li><span>subtotal:</span> <span>$<%=total%></span> </li>
                                 <li><span>delivery:</span> <span>Free</span></li>
-                                <li><span>total:</span> <span>$140.00</span></li>
+                                <li><span>total:</span> <span>$<%=total%></span></li>
+                                <input type="text" hidden name="TotalPrice" value="<%=total%>">
                             </ul>
-
                             <div class="payment-method">
                                 <!-- Cash on delivery -->
                                 <div class="custom-control custom-checkbox mr-sm-2">
-                                    <input type="checkbox" class="custom-control-input" id="cod" checked>
+                                    <input name="PaymentMethod"  type="radio" class="custom-control-input" id="cod" value="Cash" checked>
                                     <label class="custom-control-label" for="cod">Cash on Delivery</label>
                                 </div>
                                 <!-- Paypal -->
                                 <div class="custom-control custom-checkbox mr-sm-2">
-                                    <input type="checkbox" class="custom-control-input" id="paypal">
+                                    <input name="PaymentMethod"  type="radio" class="custom-control-input" id="paypal" value="paypal">
                                     <label class="custom-control-label" for="paypal">Paypal <img class="ml-15" src="img/core-img/paypal.png" alt=""></label>
                                 </div>
                             </div>
-
                             <div class="cart-btn mt-100">
-                                <a href="#" class="btn amado-btn w-100">Checkout</a>
+                                <input type="submit" class="btn amado-btn w-100" id="paypal" value="Checkout">
                             </div>
                         </div>
                     </div>
                 </div>
+                </form>
             </div>
         </div>
     </div>
