--- a/views/content.ejs
+++ b/views/content.ejs
@@ -4,7 +4,7 @@
         
         <% list_product.forEach(p => { %>
             <div class="single-products-catagory clearfix">
-                <a href="shop.html">
+                <a href="/product?id=<%=p.ProductID%>">
                     <img src="img/bg-img/1.jpg" alt="">
                     <!-- Hover Content -->
                     <div class="hover-content">
