--- a/views/product.ejs
+++ b/views/product.ejs
@@ -69,9 +69,10 @@
                         <nav aria-label="breadcrumb">
                             <ol class="breadcrumb mt-50">
                                 <li class="breadcrumb-item"><a href="#">Home</a></li>
-                                <li class="breadcrumb-item"><a href="#">Furniture</a></li>
-                                <li class="breadcrumb-item"><a href="#">Chairs</a></li>
-                                <li class="breadcrumb-item active" aria-current="page">white modern chair</li>
+                                <li class="breadcrumb-item"><a href="#"><%=p.CategoryName%>></a></li>
+<!--                                <li class="breadcrumb-item"><a href="#">Furniture</a></li>-->
+<!--                                <li class="breadcrumb-item"><a href="#">Chairs</a></li>-->
+                                <li class="breadcrumb-item active" aria-current="page"><%=p.ProductName%></li>
                             </ol>
                         </nav>
                     </div>
@@ -121,9 +122,9 @@
                             <!-- Product Meta Data -->
                             <div class="product-meta-data">
                                 <div class="line"></div>
-                                <p class="product-price">$180</p>
+                                <p class="product-price">180$</p>
                                 <a href="product-details.html">
-                                    <h6>White Modern Chair</h6>
+                                    <h6><%=p.ProductName%></h6>
                                 </a>
                                 <!-- Ratings & Review -->
                                 <div class="ratings-review mb-15 d-flex align-items-center justify-content-between">
