--- a/views/listProductByBrand.ejs
+++ b/views/listProductByBrand.ejs
@@ -18,7 +18,7 @@
                         <div class="line"></div>
                         <p class="product-price">$<%=products[i].Price%></p>
                         <a href="/product/<%=products[i].ProductID%>">
-                            <h6><%=products[i].CategoryName%>></h6>
+                            <h6><%=products[i].CategoryName%></h6>
                         </a>
                     </div>
                     <!-- Ratings & Cart -->
@@ -95,15 +95,15 @@
                         <%for(var i = 1;i<= page ;i++){%>
                             <%if(i == 1){%>
                                 <li class="page-item active">
-                                        <a class="page-link" href="#" data-link-type="/shop/<%=categoryName%>" data-id="P<%=parseInt(pid.split('P')[1]) - limit%>" onclick="getProduct(this)"><%=i%></a>
+                                        <a class="page-link" href="#" data-link-type="/shop/<%=categoryName%>" data-id="P<%=parseInt(pid.split('P')[1]) - limit%>" onclick="GetProductPage(this)"><%=i%></a>
                                 </li>
                             <%}else if(i == 2){%>
-                                <li class="page-item active">
-                                        <a class="page-link" href="#" data-link-type="/shop/<%=categoryName%>" data-id="P<%=parseInt(pid.split('P')[1])%>" onclick="getProduct(this)"><%=i%></a>
+                                <li class="page-item">
+                                        <a class="page-link" href="#" data-link-type="/shop/<%=categoryName%>" data-id="P<%=parseInt(pid.split('P')[1])%>" onclick="GetProductPage(this)"><%=i%></a>
                                 </li>
                             <%}else{%>
-                                <li class="page-item active">
-                                        <a class="page-link" href="#" data-link-type="/shop/<%=categoryName%>" data-id="P<%=parseInt(pid.split('P')[1]) + limit* (i-2)%>" onclick="getProduct(this)"><%=i%></a>
+                                <li class="page-item">
+                                        <a class="page-link" href="#" data-link-type="/shop/<%=categoryName%>" data-id="P<%=parseInt(pid.split('P')[1]) + limit* (i-2)%>" onclick="GetProductPage(this)"><%=i%></a>
                                 </li>
                             <%}%>
                         <%}%>
