update code admin page

--- a/views/CategoryManagement.ejs
+++ b/views/CategoryManagement.ejs
@@ -1,4 +1,9 @@
 <div class="col-lg-12">
+    <div class="table-data__tool-right" style="margin-bottom: 15px;">
+        <button class="au-btn au-btn-icon au-btn--green au-btn--small" data-toggle="modal" data-target="#mediumModal">
+            <i class="zmdi zmdi-plus"></i>add category
+        </button>
+    </div>    
     <!-- TOP CAMPAIGN-->
     <div class="top-campaign">
         <h3 class="title-3 m-b-30">List Category</h3>
